--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,9 @@ RewriteEngine On
 
 RewriteCond %{ENV:HTTPS} !on
 RewriteRule ^.*$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteRule ^(.*)$ $1.html
 
 # Not authorized
 ErrorDocument 401 /errors/401.html
